k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
spec:
  selector:
    app: nexus
  ports:
  - protocol: TCP
    port: 8081
