k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nexus-host
spec:
  rules:
    - host: "artifactory"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nexus
                port:
                  number: 8080
